# haskell-practice

addition/: Addition.hs  addition.cabal
hangman/: LICENSE  hangman.cabal
hangman/src/: Main.hs
haskell-book/: 01-TheLambdaCalculus.hs  02-HelloHaskell.hs  03-Strings.hs  04-BasicDatatypes.hs  05-Types.hs  06-Typeclasses.hs  10-Folds.hs  11-ControlTheTypes.hs  14-Testing.hs  15-MonoidsAndSemigroups.hs  cipher2.hs  filterCase.hs  playground.hs
haskell-practice/: Database.hs  LogAnalysis.hs  binaryTree.hs  dataTest.hs  ex002.hs  haskellNotes.hs  jammin.hs  learn.hs  madlib.hs  moreNotes.hs  print1.hs  print3.hs  sliceNDice.hs  test2.hs  testlist.hs  vehicles.hs
hello/: hello.cabal
hello/src/: DogsRule.hs
morse/: morse.cabal
morse/src/: Main.hs  Morse.hs
morse/tests/: tests.hs
